--- a/animating-react-apps/src/components/Modal/Modal.css
+++ b/animating-react-apps/src/components/Modal/Modal.css
@@ -21,6 +21,18 @@
     animation: closeModal 0.3s ease-out forwards;
 }
 
+.fade-slide-enter {
+    animation: openModal 0.3s ease-out forwards;
+}
+
+.fade-slide-enter-active {}
+
+.fade-slide-exit {}
+
+.fade-slide-exit-active {
+    animation: closeModal 0.3s ease-out forwards;
+}
+
 @keyframes openModal {
     0% {
         opacity: 0;
